tests/functional2/lang/regression-20060610/parse-fail.err.exp
error: undefined variable 'gcc'
       at /pwd/in.nix:9:11:
            8| ({
            9|   inherit gcc;
             |           ^
           10| }).gcc
